tests/correct/builtins.lua
function void main()
    local s : string = "hello";
    local l : integer;
    l = len(s);
    print(l);

    local a : array<integer>;
    local al : integer;
    al = arrayLength(a);
    print(al);
end
