tests/errors/erro_type_mismatch.lua
function void main()
    local x : integer = "string"; -- Erro de tipo
end
